增加了获得用户信息的方法

--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,7 @@
     <p>Coinchat JS SDK用于网页和原生的COINCHAT APP进行交互，可以调用COINCHAT进行支付等操作。</p>
 
     <div className="block-test block-test-invoke">
-        <button onClick="coinchat_config();" class="btn btn-primary">测试TOAST</button>
+        <button onClick="coinchat_config();" class="btn btn-primary">CONFIG</button>
+        <button onClick="getLoginUserInfo();" class="btn btn-primary">getLoginUserInfo</button>
     </div>
 </body>
