增加了支付测试代码

--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link type="text/css" rel="stylesheet" href="https://cdn.static.coinchat.im/web-static/css/bootstrap/bootstrap.min.css"></link>
     <script src="../src/build/js/index.js"></script>
-    <script src="../test/js/page.js"></script>
+    <script src="../test/js/origin/page.js"></script>
     <title>Coinchat JS SDK Test</title>
 </head>
 <body>
