--- a/test/test.html
+++ b/test/test.html
@@ -13,5 +13,14 @@
     <div className="block-test block-test-invoke">
         <button onClick="coinchat.config({});" class="btn btn-primary">CONFIG</button>
         <button onClick="coinchat.getLoginUserInfo({});" class="btn btn-primary">getLoginUserInfo</button>
+        <button onClick="coinchat.getVersion();" class="btn btn-primary">getVersion</button>
     </div>
+
+    <div>
+        <h2>支付订单</h2>
+        <div>
+            <button onClick="coinchat.getPayment();" class="btn btn-primary">支付</button>
+        </div>
+    </div>
+
 </body>
