--- a/test/test.html
+++ b/test/test.html
@@ -14,6 +14,7 @@
     <div class="block-test">
         <button onClick="coinchat.isCoinchat();" class="btn btn-primary btn-lg btn-block">isCoinchat</button>
         <button onClick="coinchat.getVersion();" class="btn btn-primary btn-lg btn-block">getVersion</button>
+        <button onClick="coinchat.getLanguage();" class="btn btn-primary btn-lg btn-block">getLanguage</button>
     </div>
 
     <div className="block-test block-test-invoke">
