移动版宽度适配

--- a/test/test.html
+++ b/test/test.html
@@ -5,6 +5,9 @@
     <link type="text/css" rel="stylesheet" href="https://cdn.static.coinchat.im/web-static/css/bootstrap/bootstrap.min.css"></link>
     <script src="../test/js/build/index.js"></script>
     <title>Coinchat JS SDK Test</title>
+    <meta content="telephone=no" name="format-detection" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0,viewport-fit=cover"/>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
 </head>
 <body>
     <h1>Coinchat-JS-SDK</h1>
