--- a/test/test.html
+++ b/test/test.html
@@ -18,6 +18,7 @@
         <button onClick="coinchat.isCoinchat();" class="btn btn-primary btn-lg btn-block">isCoinchat</button>
         <button onClick="coinchat.getVersion();" class="btn btn-primary btn-lg btn-block">getVersion</button>
         <button onClick="coinchat.getLanguage();" class="btn btn-primary btn-lg btn-block">getLanguage</button>
+        <button onClick="coinchat.getSharePlatform();" class="btn btn-primary btn-lg btn-block">getSharePlatform</button>
     </div>
 
     <div class="block-test block-test-invoke">
