推送版本到测试服务器测试video_ad相关代码

--- a/test/test.html
+++ b/test/test.html
@@ -66,6 +66,13 @@
     </div>
 
     <div class="block-test block-test-invoke">
+        <h2>观看google video ad</h2>
+        <div>
+            <button onClick="coinchat.sendShowVideoAdEvent();" class="btn btn-primary btn-lg btn-block">立即观看</button>
+        </div>
+    </div>
+
+    <div class="block-test block-test-invoke">
         <h2>支付测试</h2>
         <div>
             <input id="amount" placeholder="输入支付ETH金额" class="form-control" />
